Mon Jan 10 09:50:38 GMT 2011  Olly Betts <olly@survex.com>

	* diritor.cc,diritor.h: Don't define or try to set euid member of
	  DirectoryIterator on platforms where we aren't going to use it.

Mon Jan 10 09:15:24 GMT 2011  Olly Betts <olly@survex.com>

	* diritor.h: Stub out get_owner() and get_group() for __WIN32__.

Fri Dec 24 10:35:29 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Thu Dec 23 01:53:06 GMT 2010  Olly Betts <olly@survex.com>

	* diritor.cc: Fix to work with older libmagic which doesn't have
	  MAGIC_MIME_TYPE (e.g. on Ubuntu hardy).

Sun Dec 19 12:39:23 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: 1.2.4.

Sun Dec 19 12:37:58 GMT 2010  Olly Betts <olly@survex.com>

	* query.cc: Disable permission filtering based on $REMOTE_USER as that
	  will break some existing installations if users upgrade, which we
	  don't want.  Probably this should be specifiable from OmegaScript
	  but it's not worth delaying 1.2.4 while we sort this out.

Sun Dec 19 02:46:17 GMT 2010  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: Change the new name for
	  "--preserve-unupdated" from "--preserve-removed" to "--no-delete".

Sun Dec 19 02:32:29 GMT 2010  Olly Betts <olly@survex.com>

	* query.cc: Fix comment typo.

Fri Dec 17 12:45:47 GMT 2010  Olly Betts <olly@survex.com>

	* commonhelp.cc,commonhelp.h,omindex.cc,scriptindex.cc: Swap the
	  meanings of -v and -V in omindex for consistency with scriptindex
	  and typical short options for --verbose and --version in other
	  packages.  For backward compatibility, "omindex -v" is handled
	  specially and still reports the version.

Fri Dec 17 08:31:29 GMT 2010  Olly Betts <olly@survex.com>

	* utf8convert.cc: Fix built in converter to handle space in charset
	  names, which fixes failing utf8converttest when iconv isn't
	  available.

Fri Dec 17 05:36:36 GMT 2010  Olly Betts <olly@survex.com>

	* utf8convert.cc: Rework the fixing up of charset names which iconv()