@@ -1,3 +1,8 @@
+Mon Jan 10 10:00:00 GMT 2011  Olly Betts <olly@survex.com>
+
+	* omindex.cc,pkglibbindir.cc,pkglibbindir.h: Fix typo in function name
+	  (get_pkglibdindir() -> get_pkglibbindir()).
+
 Mon Jan 10 09:50:38 GMT 2011  Olly Betts <olly@survex.com>
 
 	* diritor.cc,diritor.h: Don't define or try to set euid member of
